# calc

./: .gitignore  README.md  setup.cfg
src/calc/: __init__.py  calculation.py  cells.py  data.py  main.py  model.py  params.py  settings.py  species.py
src/casbot/: __init__.py  calculation.py  data.py  io.py  model.py  results.py  settings.py
tests/: HI.cell  HI.param  run.sh  test.py
tests/HCl/: HCl.cell  HCl.param
tests/HF/: HF.cell
