[metadata]
name = calc
version = 0.0.1
author = Ava Dean
author_email = ava.dean@chem.ox.ac.uk
description = This does my DPhil.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avadean/calc
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
